bk_ida/gccida/c0/get_attr_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:20931:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type  get_attr_type( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:20938:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v7; // [rsp+4Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:20947:80: error: expected expression
if ( ( unsigned __int16)**( _DWORD **)&insn[2] != 40 && asm_noperands( *( rtx *)&insn[2]) < 0 ) 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:20948:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 21978, "get_attr_type"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:20948:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 21978, "get_attr_type"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21162:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( flag_pic && symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21196:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& aligned_operand( recog_data_0.operand[1], HImode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21251:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[0], QImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21252:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( !q_regs_operand( recog_data_0.operand[0], QImode) || ( ( 1 << ix86_cpu) & x86_movx) != 0) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21263:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[0], QImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21264:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( !q_regs_operand( recog_data_0.operand[0], QImode) || ( ( 1 << ix86_cpu) & x86_movx) != 0) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21275:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( register_operand( recog_data_0.operand[0], QImode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21276:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( !q_regs_operand( recog_data_0.operand[0], QImode) || ( ( 1 << ix86_cpu) & x86_movx) != 0) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21287:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( q_regs_operand( recog_data_0.operand[0], QImode) && ( ( 1 << ix86_cpu) & x86_movx) == 0 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21337:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( flag_pic && symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21635:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21639:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( incdec_operand( recog_data_0.operand[2], DImode) ) 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21653:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( incdec_operand( recog_data_0.operand[2], DImode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/insn-attrtab.c:21660:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_type/src/obj/insn-attrtab.o] Error 1
